--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,47 @@
+@import url("reset.css");
+
+.content-box{
+
+    margin-left:auto;
+    margin-right: auto;
+    height: 100%;
+    width: 960px;
+    background: rgba(255,0,255,0.2);
+}
+
 #header{
     height: 70px;
-    background : yellow;
+    background : #36ff4020;
 }
+
 
 #visual{    
     height: 171px;
-    background : green;
+    background : rgb(0,255,0);
 }
 
 #body{
     height: 300px;
-    background : red;
+    background : rgb(100%,0%,0%);
 }
+    #body>.content-box{
+        display: flex;
+    }
 
+    #aside{
+        height: inherit;
+        width:205px;
+        background: red;
+    }
+
+    #main{
+        height: inherit;
+        width: 755px;
+        background: yellow;
+    }
 
 #footer{
     height: 100px;
     background :gray;
 }
+
